--- a/data-binding-app/src/app/app.component.html
+++ b/data-binding-app/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!--
 <app-string-interpolation></app-string-interpolation>
 -->
+<!--
 <app-property-binding></app-property-binding>
+-->
+<app-event-binding></app-event-binding>
