--- a/data-binding-app/src/app/event-binding/event-binding.component.html
+++ b/data-binding-app/src/app/event-binding/event-binding.component.html
@@ -11,9 +11,33 @@
   <button mat-button color="primary" [disabled]="!btnEnabled">My Button 01</button>
   <button mat-button color="warn" [disabled]="!btnEnabled">My Button 02</button>
   <button mat-button color="warn" (click)="disabled()">Disabled</button>
-  <mat-progress-spinner
-        color="primary"
-        [mode]="spinnerMode"
-        value="0">
-    </mat-progress-spinner>
+  <mat-progress-spinner color="primary" [mode]="spinnerMode" value="0">
+  </mat-progress-spinner>
+</section>
+
+<section>
+  <p>
+    <mat-card>
+      <mat-card-content>
+        <p>
+          <mat-checkbox color="warn" (change)="cbChange($event)">Disable / Enable</mat-checkbox>
+        </p>
+        <mat-form-field>
+          <mat-label>Cars</mat-label>
+          <mat-select required [disabled]="selectDisabled" (selectionChange)="selectionChange($event)">
+            <mat-option value="1">Volvo</mat-option>
+            <mat-option value="2">Saab</mat-option>
+            <mat-option value="3">Mercedes</mat-option>
+            <mat-option value="4">Audi</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <p>
+          Selected Option : {{selectedOption}}
+        </p>
+      </mat-card-actions>
+    </mat-card>
+
+  </p>
 </section>
