--- a/data-binding-app/src/app/app.component.html
+++ b/data-binding-app/src/app/app.component.html
@@ -4,4 +4,7 @@
 <!--
 <app-property-binding></app-property-binding>
 -->
+<!--
 <app-event-binding></app-event-binding>
+-->
+<app-two-way-data-binding></app-two-way-data-binding>
