--- a/diretivas-app/src/app/app.component.html
+++ b/diretivas-app/src/app/app.component.html
@@ -1,3 +1,6 @@
-<!-- <app-ng-style></app-ng-style> -->
-<!-- <app-ng-class></app-ng-class> -->
-<app-ng-if></app-ng-if>
+<!-- <app-ng-style></app-ng-style> 
+<app-ng-class></app-ng-class> 
+<app-ng-if></app-ng-if> 
+<app-ng-for></app-ng-for>
+-->
+<app-ng-for-form></app-ng-for-form>
