--- a/diretivas-app/src/app/app.component.html
+++ b/diretivas-app/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-ng-class></app-ng-class> 
 <app-ng-if></app-ng-if> 
 <app-ng-for></app-ng-for>
--->
 <app-ng-for-form></app-ng-for-form>
+-->
+<app-ng-switch></app-ng-switch>
