--- a/diretivas-app/src/app/app.component.html
+++ b/diretivas-app/src/app/app.component.html
@@ -5,4 +5,5 @@
 <app-ng-for-form></app-ng-for-form>
 <app-ng-switch></app-ng-switch>
 -->
-<app-ng-template></app-ng-template>
+<!-- <app-ng-template></app-ng-template> -->
+<app-ng-container></app-ng-container>
