--- a/diretivas-app/src/app/app.component.html
+++ b/diretivas-app/src/app/app.component.html
@@ -6,4 +6,8 @@
 <app-ng-switch></app-ng-switch>
 -->
 <!-- <app-ng-template></app-ng-template> -->
-<app-ng-container></app-ng-container>
+<!-- <app-ng-container></app-ng-container> -->
+<app-ng-content>
+    <p>Hello, my name is <strong>Homer Simpson</strong>, nice to meet you.</p>
+    <p>One more beer, please.</p>
+</app-ng-content>
