Input Binding com objetos

--- a/communication-app/src/app/app.component.html
+++ b/communication-app/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-input-binding name="Bob" lastname="Doe"></app-input-binding>
+<app-input-binding 
+name="Bob"
+lastname="Doe"
+[age]="age"
+></app-input-binding>
