--- a/communication-app/src/app/app.component.html
+++ b/communication-app/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-input-binding 
+<!-- <app-input-binding 
 name="Bob"
 lastname="Doe"
 [age]="age"
-></app-input-binding>
+></app-input-binding> -->
+
+<app-event></app-event>
