Event Emitter com parâmetros

--- a/communication-app/src/app/event/child-item/child-item.component.html
+++ b/communication-app/src/app/event/child-item/child-item.component.html
@@ -4,19 +4,19 @@
 
 <div class="horizontal-buttons">
   <button mat-raised-button color="primary" 
-  (onclick)="plusOneClick()">
+  (click)="btnClick(1)">
     +1
   </button>
   <button mat-raised-button color="primary" 
-  (onclick)="plusTwoClick()">
+  (click)="btnClick(2)">
     +2
   </button>
   <button mat-raised-button color="accent" 
-  (onclick)="minusOneClick()">
+  (click)="btnClick(-1)">
     -1
   </button>
   <button mat-raised-button color="accent" 
-  (onclick)="minusTwoClick()">
+  (click)="btnClick(-2)">
     -2
   </button>
 </div>
