Lista de clients com EventEmitter

--- a/communication-app/src/app/app.component.html
+++ b/communication-app/src/app/app.component.html
@@ -4,4 +4,6 @@ lastname="Doe"
 [age]="age"
 ></app-input-binding> -->
 
-<app-event></app-event>
+<!-- <app-event></app-event> -->
+
+<app-clients></app-clients>
