Exemplo de variavel Template

--- a/communication-app/src/app/app.component.html
+++ b/communication-app/src/app/app.component.html
@@ -2,8 +2,9 @@
 name="Bob"
 lastname="Doe"
 [age]="age"
-></app-input-binding> -->
-
-<!-- <app-event></app-event> -->
-
+></app-input-binding>
+<app-event></app-event>
 <app-clients></app-clients>
+ -->
+
+ <app-parent-child></app-parent-child>
