--- a/communication-app/src/app/app.component.html
+++ b/communication-app/src/app/app.component.html
@@ -5,6 +5,6 @@ lastname="Doe"
 ></app-input-binding>
 <app-event></app-event>
 <app-clients></app-clients>
- -->
-
- <app-parent-child></app-parent-child>
+<app-parent-child></app-parent-child>
+-->
+<app-on-changes></app-on-changes>
