Interceptando mudanças no input

--- a/communication-app/src/app/app.component.html
+++ b/communication-app/src/app/app.component.html
@@ -6,5 +6,6 @@ lastname="Doe"
 <app-event></app-event>
 <app-clients></app-clients>
 <app-parent-child></app-parent-child>
--->
 <app-on-changes></app-on-changes>
+-->
+<app-intercepting></app-intercepting>
