Inicio do projeto

--- a/lifecycle/src/app/main-lifecycle/main-lifecycle.component.html
+++ b/lifecycle/src/app/main-lifecycle/main-lifecycle.component.html
@@ -1,3 +1,40 @@
-<p>
-  main-lifecycle works!
-</p>
+<mat-card>
+  <mat-card-title>
+    Clients
+  </mat-card-title>
+  <mat-card-content>
+    <section>
+      <mat-form-field class="form-field" style="width: 400px; padding-right: 20px;">
+        <input matInput placeholder="Name" [(ngModel)]="name">
+      </mat-form-field>
+      <mat-form-field class="form-field" style="width: 100px; padding-right: 20px">
+        <input matInput placeholder="Age" [(ngModel)]="age">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-select placeholder="Favorite Food" [(ngModel)]="food">
+          <mat-option *ngFor="let foodOption of foods" [value]="foodOption">
+            {{foodOption}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <button mat-icon-button color="primary" (click)="save()">
+        <mat-icon>check</mat-icon>
+      </button>
+      <button mat-icon-button color="primary">
+        <mat-icon>refresh</mat-icon>
+      </button>
+    </section>
+    <section>
+      <mat-list>
+        <mat-list-item *ngFor="let client of clients">
+          <p mat-line>
+            <app-life-cycle-child [name]="client.name" [age]="client.age" [favoriteFood]="client.food">
+            </app-life-cycle-child>
+          </p>
+          <button mat-icon-button color="warn">Delete</button>
+          <button mat-icon-button color="primary">Edit</button>
+        </mat-list-item>
+      </mat-list>
+    </section>
+  </mat-card-content>
+</mat-card>
