--- a/lifecycle/src/app/main-lifecycle/life-cycle-child/life-cycle-child.component.html
+++ b/lifecycle/src/app/main-lifecycle/life-cycle-child/life-cycle-child.component.html
@@ -1,1 +1,1 @@
-Client {{name}} - Age: {{age}} years old - Favorite food : {{favoriteFood}}
+Client: {{name}} - Age: {{age}} years old - Favorite food : {{favoriteFood}}
