--- a/lifecycle/src/app/main-lifecycle/main-lifecycle.component.html
+++ b/lifecycle/src/app/main-lifecycle/main-lifecycle.component.html
@@ -20,19 +20,34 @@
       <button mat-icon-button color="primary" (click)="save()">
         <mat-icon>check</mat-icon>
       </button>
-      <button mat-icon-button color="primary">
+      <button mat-icon-button color="primary" (click)="refresh()">
         <mat-icon>refresh</mat-icon>
       </button>
     </section>
     <section>
       <mat-list>
-        <mat-list-item *ngFor="let client of clients">
+        <mat-list-item *ngFor="let client of clients; let i = index">
           <p mat-line>
-            <app-life-cycle-child [name]="client.name" [age]="client.age" [favoriteFood]="client.food">
+            <app-life-cycle-child
+            [name]="client.name"
+            [age]="client.age"
+            [favoriteFood]="client.food"
+            #child>
             </app-life-cycle-child>
           </p>
-          <button mat-icon-button color="warn">Delete</button>
-          <button mat-icon-button color="primary">Edit</button>
+          <p mat-line>
+              <mat-chip-list>
+                <mat-chip *ngFor="let events of child.events" [color]="events.color" selected>
+                  {{events.name}}
+                </mat-chip>
+              </mat-chip-list>
+            </p>
+          <button mat-icon-button color="warn" (click)="delete(i)">
+            Delete
+          </button>
+          <button mat-icon-button color="primary" (click)="edit(i)">
+            Edit
+          </button>
         </mat-list-item>
       </mat-list>
     </section>
