Entendo ngAfterContentInit e ngAfterViewInit

--- a/lifecycle/src/app/main-lifecycle/life-cycle-child/life-cycle-child.component.html
+++ b/lifecycle/src/app/main-lifecycle/life-cycle-child/life-cycle-child.component.html
@@ -1,1 +1,4 @@
 Client: {{name}} - Age: {{age}} years old - Favorite food : {{favoriteFood}}
+<!-- A tag abaixo projeta tudo que for enviado para dentro da tag -->
+<ng-content></ng-content>
+<app-child-child [name]="name"></app-child-child>
