--- a/lifecycle/src/app/main-lifecycle/main-lifecycle.component.html
+++ b/lifecycle/src/app/main-lifecycle/main-lifecycle.component.html
@@ -33,6 +33,8 @@
             [age]="client.age"
             [favoriteFood]="client.food"
             #child>
+            <!-- Será enviado para ng-content -->
+            {{randomNumber}}
             </app-life-cycle-child>
           </p>
           <p mat-line>
