--- a/observables-app/src/app/app.component.html
+++ b/observables-app/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--
     <app-basic></app-basic>
--->
 <app-cold-observables></app-cold-observables>
+-->
+<app-hot-observable></app-hot-observable>
