--- a/http-server/client/app-client/src/app/app.component.html
+++ b/http-server/client/app-client/src/app/app.component.html
@@ -3,7 +3,7 @@
 </mat-toolbar>
 <br>
 <div fxLayout="row wrap" fxLayoutAlign="space-between start" fxLayoutGap="20px">
-  <mat-card fxFlex="30" class="mat-elevation-z8">
+  <mat-card fxFlex="20" class="mat-elevation-z8">
     <mat-card-header>
       <mat-card-title>Simple HTTP Get</mat-card-title>
     </mat-card-header>
@@ -25,48 +25,73 @@
     </mat-card-footer>
   </mat-card>
 
-  <mat-card fxFlex="30" class="mat-elevation-z8">
-      <mat-card-header>
-        <mat-card-title>HTTP Get/Error Handling</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-       <ul *ngIf="productsErrorHandling">
-         <li *ngFor="let p of productsErrorHandling">
-           {{p.name}}
-         </li>
-       </ul>
-      </mat-card-content>
-      <mat-card-actions>
-          <button mat-button color="accent" (click)="getProductsWithErrorHandling()">
-              <mat-icon>swap_vert</mat-icon> Send Error Request
-            </button>
-        <button mat-button color="primary" (click)="getProductsWithErrorHandlingOk()">
-          <mat-icon>swap_vert</mat-icon> Send Success Request
-        </button>
-      </mat-card-actions>
-      <mat-card-footer>
-      </mat-card-footer>
-    </mat-card>
+  <mat-card fxFlex="20" class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>HTTP Get/Error Handling</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <ul *ngIf="productsErrorHandling">
+        <li *ngFor="let p of productsErrorHandling">
+          {{p.name}}
+        </li>
+      </ul>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="accent" (click)="getProductsWithErrorHandling()">
+        <mat-icon>swap_vert</mat-icon> Send Error Request
+      </button>
+      <button mat-button color="primary" (click)="getProductsWithErrorHandlingOk()">
+        <mat-icon>swap_vert</mat-icon> Send Success Request
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>
+    </mat-card-footer>
+  </mat-card>
 
-    <mat-card fxFlex="30" class="mat-elevation-z8">
-        <mat-card-header>
-          <mat-card-title>HTTP Get/Loading</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-         <ul *ngIf="productsLoading">
-           <li *ngFor="let p of productsLoading">
-             {{p.name}}
-           </li>
-         </ul>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button color="primary" (click)="getProductsLoading()">
-            <mat-icon>swap_vert</mat-icon> Send Success Request
+  <mat-card fxFlex="20" class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>HTTP Get/Loading</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <ul *ngIf="productsLoading">
+        <li *ngFor="let p of productsLoading">
+          {{p.name}}
+        </li>
+      </ul>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="getProductsLoading()">
+        <mat-icon>swap_vert</mat-icon> Send Success Request
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>
+      <mat-progress-bar mode="query" *ngIf="bLoading"></mat-progress-bar>
+    </mat-card-footer>
+  </mat-card>
+  <hr>
+  <mat-card fxFlex="20" class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>Geting text from the server</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-list>
+        <mat-list-item *ngFor="let p of productsId; let i = index">
+          <mat-icon mat-list-icon>shop</mat-icon>
+          <h4 mat-line *ngIf="p.name != ''">{{p.name}}</h4>
+          <h4 mat-line *ngIf="p.name == ''">Product {{i}}</h4>
+          <button mat-icon-button color="primary" (click)="loadName(p._id)" *ngIf="p.name == ''">
+            <mat-icon>refresh</mat-icon>
           </button>
-        </mat-card-actions>
-        <mat-card-footer>
-          <mat-progress-bar mode="query" *ngIf="bLoading"></mat-progress-bar>
-        </mat-card-footer>
-      </mat-card>
-  
+        </mat-list-item>
+      </mat-list>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="getProductsId()">
+        <mat-icon>swap_vert</mat-icon> Send Request
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>
+    </mat-card-footer>
+  </mat-card>
+
 </div>
