--- a/template-driven/src/app/template-driven-form/template-driven-form.component.html
+++ b/template-driven/src/app/template-driven-form/template-driven-form.component.html
@@ -1,6 +1,6 @@
 <div layout="column" layout-fill>
   <div align="center" layout="row" layout-align="center center">
-    <mat-card class="info-card mat-elevation-z8" flex="80" style="margin-top: 60px;width: 800px;;">
+    <mat-card class="info-card mat-elevation-z8" flex="80" style="margin-top: 60px;width: 800px;">
       <mat-card-title></mat-card-title>
       <mat-card-subtitle>
       </mat-card-subtitle>
@@ -61,7 +61,8 @@
             </mat-form-field>
           </div>
           <button mat-button color="primary" type="submit">
-            <mat-icon>done</mat-icon>Submit
+            <mat-icon>done</mat-icon>
+            Submit
           </button>
         </form>
       </mat-card-content>
