--- a/template-driven/src/app/app.component.html
+++ b/template-driven/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-template-driven-form></app-template-driven-form> -->
-<!-- <app-form-native-validation></app-form-native-validation> -->
-<app-form-validation></app-form-validation>
+<!-- <app-form-native-validation></app-form-native-validation> 
+<app-form-validation></app-form-validation>-->
+<app-form-control></app-form-control>
