--- a/template-driven/src/app/app.component.html
+++ b/template-driven/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- <app-template-driven-form></app-template-driven-form> -->
 <!-- <app-form-native-validation></app-form-native-validation> 
 <app-form-validation></app-form-validation>
-<app-form-control></app-form-control>-->
-<app-form-group></app-form-group>
+<app-form-control></app-form-control>
+<app-form-group></app-form-group>-->
+<app-form-builder></app-form-builder>
